...
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">
        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/monday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/tuesday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/wednesday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="45dp">
            <ImageButton
                android:id="@+id/thursday_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/day_color" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="12dp">
            <Spinner
                android:id="@+id/create_time_block_start_time_hour_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:text="@string/AM" />

            <RadioButton
                android:id="@+id/create_time_block_start_time_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PM"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="12dp">
            <Spinner
                android:id="@+id/create_time_block_end_time_hour_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/time_block_end_time_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="12dp">
            <RadioButton
                android:id="@+id/create_time_block_end_time_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AM" />

            <RadioButton
                android:id="@+id/create_time_block_end_time_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PM"/>
        </RadioGroup>
    </LinearLayout>

...
