...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/schedule_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:hint="@string/schedule_name_edit_text_hint"
        android:layout_margin="12dp"/>

...
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/time_block_list_label"/>

    <android.support.v7.widget.ListViewCompat
        android:id="@+id/schedule_time_block_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"/>

    <Button
        android:id="@+id/schedule_add_time_block"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/add_time_block"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
...
